--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "typescript-monorepo-example",
+  "name": "typescript-pnpm-monorepo-example",
   "version": "1.0.0",
   "description": "An example typescript monorepo",
   "scripts": {
     "prepublish": "pnpm build",
-    "verify": "lerna run verify --stream",
-    "prettier": "lerna run prettier",
-    "build": "lerna run build",
-    "test": "NODE_ENV=development lerna run test --stream"
+    "verify": "pnpm -r  --stream run verify",
+    "prettier": "pnpm -r run prettier",
+    "build": "pnpm -r run build",
+    "test": "NODE_ENV=development pnpm -r --stream run test"
   },
-  "author": "@CryogenicPlanet",
+  "author": "@jfbloom22",
   "license": "ISC",
   "private": true,
   "husky": {
@@ -42,7 +42,6 @@
     "eslint-plugin-standard": "^5.0.0",
     "husky": "^6.0.0",
     "jest": "^27.0.3",
-    "lerna": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.0",
     "prettier-config-standard": "^4.0.0",
@@ -50,8 +49,5 @@
     "tsconfig-paths-jest": "^0.0.1",
     "typescript": "^4.3.2",
     "wait-on": "^5.3.0"
-  },
-  "workspaces": [
-    "packages/*"
-  ]
+  }
 }
