--- a/packages/package-b/package.json
+++ b/packages/package-b/package.json
@@ -21,9 +21,9 @@
     "prettier": "prettier --check src/",
     "prettier:fix": "prettier --write src/",
     "lint": "eslint . --ext .ts,.tsx",
-    "lint:fix": "yarn lint --fix",
+    "lint:fix": "pnpm lint --fix",
     "verify": "run-p prettier lint",
-    "verify:fix": "yarn prettier:fix && yarn lint:fix"
+    "verify:fix": "pnpm prettier:fix && pnpm lint:fix"
   },
   "dependencies": {
     "@monorepo/package-a": "^1.0.0",
